exports[`test renders a directory with children without 1`] = `
<div>
  <header
    className="DirectoryHeader--WithBanner">
    <div>
      <div>
        <div
          className="Loader DirectoryHeader__Image">
          <div
            className="Loader__BallScaleRippleMultiple">
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="DirectoryHeader__Image"
        style={Object {}} />
    </div>
    <a
      className="DirectoryHeader__Back"
      onClick={[Function]}
      style={Object {}}>
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m24 9.3c-1.3-1.3-3.4-1.3-4.7 0l-10.7 10.7 10.7 10.7c0.7 0.6 1.5 1 2.4 1s1.7-0.4 2.3-1c1.3-1.3 1.3-3.4 0-4.7l-5.9-6 5.9-6c1.3-1.3 1.3-3.4 0-4.7z" />
        </g>
      </svg>
      Back to albums
    </a>
    <h1
      className="DirectoryHeader__Title">
      foo
    </h1>
  </header>
  <div
    className="Directory__ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={Object {}}>
        <svg
          className="Thumbnail_FolderPlaceholder"
          fill="currentColor"
          height={200}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "color": undefined,
              "verticalAlign": "middle",
            }
          }
          viewBox="0 0 40 40"
          width={200}>
          <g>
            <path
              d="m30 10h-10c0-1.8-1.5-3.3-3.3-3.3h-6.7c-2.8 0-5 2.2-5 5v16.6c0 2.8 2.2 5 5 5h20c2.8 0 5-2.2 5-5v-13.3c0-2.8-2.2-5-5-5z m-20 0h6.7c0 1.8 1.5 3.3 3.3 3.3h10c0.9 0 1.7 0.8 1.7 1.7h-23.4v-3.3c0-1 0.8-1.7 1.7-1.7z m20 20h-20c-0.9 0-1.7-0.7-1.7-1.7v-11.6h23.4v11.6c0 1-0.8 1.7-1.7 1.7z" />
          </g>
        </svg>
        <span
          className="Thumbnail_Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="DirectoryFooter">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders a directory with header 1`] = `
<div>
  <header
    className="DirectoryHeader--WithBanner">
    <div>
      <div>
        <div
          className="Loader DirectoryHeader__Image">
          <div
            className="Loader__BallScaleRippleMultiple">
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
            <div
              style={
                Object {
                  "borderColor": "#594F3F",
                }
              } />
          </div>
        </div>
      </div>
      <div
        className="DirectoryHeader__Image"
        style={Object {}} />
    </div>
    <a
      className="DirectoryHeader__Back"
      onClick={[Function]}
      style={Object {}}>
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m24 9.3c-1.3-1.3-3.4-1.3-4.7 0l-10.7 10.7 10.7 10.7c0.7 0.6 1.5 1 2.4 1s1.7-0.4 2.3-1c1.3-1.3 1.3-3.4 0-4.7l-5.9-6 5.9-6c1.3-1.3 1.3-3.4 0-4.7z" />
        </g>
      </svg>
      Back to albums
    </a>
    <h1
      className="DirectoryHeader__Title">
      foo
    </h1>
  </header>
  <div
    className="Directory__ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="DirectoryFooter">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders a non empty directory 1`] = `
<div>
  <div
    className="Directory__ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="DirectoryFooter">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders a non empty directory with parent 1`] = `
<div>
  <header
    className="">
    <a
      className="DirectoryHeader__Back"
      onClick={[Function]}
      style={Object {}}>
      <svg
        fill="currentColor"
        height="1em"
        preserveAspectRatio="xMidYMid meet"
        style={
          Object {
            "color": undefined,
            "verticalAlign": "middle",
          }
        }
        viewBox="0 0 40 40"
        width="1em">
        <g>
          <path
            d="m24 9.3c-1.3-1.3-3.4-1.3-4.7 0l-10.7 10.7 10.7 10.7c0.7 0.6 1.5 1 2.4 1s1.7-0.4 2.3-1c1.3-1.3 1.3-3.4 0-4.7l-5.9-6 5.9-6c1.3-1.3 1.3-3.4 0-4.7z" />
        </g>
      </svg>
      Back to albums
    </a>
  </header>
  <div
    className="Directory__ThumbnailList">
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2909-vallon-moy-res-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Alps
        </span>
      </article>
    </a>
    <a
      onClick={[Function]}
      style={Object {}}>
      <article
        className="Thumbnail"
        style={
          Object {
            "backgroundImage": "url(http://demo.opium.sitioweb.fr/2010-mavericks-competition-edit1-jpg/thumbs/200-200)",
          }
        }>
        <span
          className="Thumbnail_Caption">
          Pacific Ocean
        </span>
      </article>
    </a>
  </div>
  <footer
    className="DirectoryFooter">
    Total number of items: 
    2
  </footer>
</div>
`;

exports[`test renders an empty directory 1`] = `
<div>
  <div
    className="Directory__ThumbnailList" />
  <footer
    className="DirectoryFooter">
    Total number of items: 
    0
  </footer>
</div>
`;

exports[`test renders directory without crashing 1`] = `<div />`;
